# Food-Waste-Optimization

./: .coverage  .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  Dockerfile.ANN  Dockerfile.frontend  LICENSE  README.md  branching-practices.md  docker-compose.yaml  dod.md  general_practices.md  gitignore  package-lock.json  pyproject.toml  tasks.py
.github/workflows/: deploy.yml  main.yml  publish-docker-image.yml  staging.yml  tests.yml
Documentation/: commit_practices.md  future_developments.md  megasense_server.md  model_doc.md  postgresql_instructions.md  programming_practices.md  schema.md  sprint1-goals.md  sprint2_goals.md  start_instructions.md  tech-stack.md  tech_stack.md  technical_documentation.md
Documentation/db/: authDB.sql
Dokumentaatio/: commit_practices.md  programming_practices.md  tech-stack.md
schemas/: restaurants.sql  results.sql
src/: config.py  index.py
src/app/: app.py  db.py  index.py  routes.py
src/data/basic_mvp_data/: Kopio_Kumpula asiakasdataa.xlsx  README.md  Tuntikohtainen asiakasmäärä v2.xlsx
src/frontend/: README.md  index.html  my-bulma-project.scss  package-lock.json  package.json  vite.config.js
src/frontend/ReactFrontEnd/: README.md  package-lock.json  package.json
src/frontend/src/: App.jsx  main.jsx
src/repositories/: data_repository.py  db_repository.py  db_scripts.py  user_repository.py
src/routers/: data_router.py  login_router.py
src/services/: analysis.py  formatting.py  language_processor.py  linear_regression.py  ml_model.py  model_service.py  neural_network.py
src/templates/: data.html  index.html
src/tests/: test_app.py
src/tests/services/: analysis_test.py  model_service.py
(+18 files in other folders)
