[tool.poetry]
name = "food-waste-reduction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
invoke = "^2.2.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.3"
matplotlib = "^3.9.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
spacy-stanza = "^1.0.4"
spacy = "^3.7.5"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pylint = "^3.2.2"
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
